hphp/hack/test/typecheck/expression_trees/splice_err4.php.exp
File "splice_err4.php", line 13, characters 17-21:
Typing error (Typing[4110])
  File "splice_err4.php", line 13, characters 17-21:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_err4.php", line 9, characters 10-10:
  But got `int`
File "splice_err4.php", line 13, characters 19-20:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 170, characters 5-35:
  Expected `Spliceable<Code, mixed, [unresolved]>`
  File "splice_err4.php", line 9, characters 10-10:
  But got `int`
